# aws-merlin-agent

./: .gitignore  AGENTS.md  AWS_DEPLOYMENT.md  Makefile  README.md  SUBMISSION.md  cdk.json  deploy.sh  deploy_ec2.sh  deploy_ui.sh  pyproject.toml  requirements.txt  streamlit.Dockerfile
configs/demo/: config.yaml
configs/dev/: config.yaml
data/sample/: README.md  sales.json
docs/: ARCHITECTURE.md  DEMO_VIDEO_GUIDE.md  DEPLOYMENT.md  PRD.md  TECHNICAL_SPEC.md
infra/: cdk_app.py
infra/stacks/: agent_stack.py  data_platform_stack.py
scripts/: bootstrap_env.sh  check_deployment.sh  demo_run.py  deploy_aws.sh  generate_synthetic_data.py  load_sample_data.py  test_agent.py
src/aws_merlin_agent/: __init__.py
src/aws_merlin_agent/actions/executors/: price_update.py
src/aws_merlin_agent/agent/: bedrock_agent.py
src/aws_merlin_agent/agent/policies/: guardrails.py
src/aws_merlin_agent/agent/tools/: bedrock_summary.py  metrics_query.py
src/aws_merlin_agent/agent/workflows/: agent_plan.py
src/aws_merlin_agent/config/: settings.py
src/aws_merlin_agent/creative/: nova_assets.py
src/aws_merlin_agent/features/: engineering.py
src/aws_merlin_agent/models/: registry.py
src/aws_merlin_agent/ui/: chat_app.py
src/aws_merlin_agent/utils/: aws.py  logging.py
tests/: conftest.py
tests/agent/: test_bedrock_agent.py  test_bedrock_summary.py  test_guardrails.py  test_workflow.py
tests/data_ingestion/: test_api_ingest.py
tests/features/: test_engineering.py
tests/models/: test_local_inference.py  test_training_pipeline.py
(+10 files in other folders)
